@@ -1,7 +1,7 @@
 
- OpenSSL 1.1.0-dev XX xxx XXXX
+ OpenSSL 1.1.0-dev
 
- Copyright (c) 1998-2009 The OpenSSL Project
+ Copyright (c) 1998-2011 The OpenSSL Project
  Copyright (c) 1995-1998 Eric A. Young, Tim J. Hudson
  All rights reserved.
 
